fix component spill-mobile

--- a/subscription-checkout/style.css
+++ b/subscription-checkout/style.css
@@ -65,7 +65,7 @@ h2 {
 }
 
 .payment-plan {
-    width: 85vw;
+    width: 100%;
     height: 9vh;
     border-radius: 0.75rem;
     padding: 1.2rem;
